update HRopen spec
